Fix crash on Save during merge

BUG: 482590